syntax = "proto3";

package health;

option go_package = "UptimePingPlatform/proto/health/v1";

// Health check service
service Health {
  // Checks the health of a service
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  
  // Watches for health changes
  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

// Request message for health check
message HealthCheckRequest {
  string service = 1;
}

// Response message for health check
message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  
  ServingStatus status = 1;
  string message = 2;
}
